--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -113,6 +113,18 @@
     left: unset;
     top: unset;
   }
+
+  h1 {
+    font-size: 40px;
+  }
+
+  h2 {
+    font-size: 35px;
+  }
+
+  h3 {
+    font-size: 20px;
+  }
 }
 
 @media (min-width: 640px) {
